feat: return collection
